argo-cd/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: default   
spec:
  hosts:
    - "*"   
  gateways:
    - go-app-gateway
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argo-cd-argocd-server.default.svc.cluster.local
            port:
              number: 80
